# udrome

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO.md  udrome.example.toml
frontend/: .gitignore  Cargo.toml  Dioxus.toml  README.md  _tailwind  build.rs  input.css  package-lock.json  package.json  run  watch_tailwind
frontend/assets/styling/: main.css
frontend/favicon/: site.webmanifest
frontend/src/: main.rs
frontend/src/components/: hero.rs  mod.rs  navbar.rs  player.rs  search_result.rs  udrome.rs
frontend/src/model/: globals.rs  mod.rs
frontend/src/sdk/: debounce.rs  mod.rs
frontend/src/views/: blog.rs  home.rs  mod.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
plugins/: oggvorbis.rhai
rodio-test/: Cargo.toml  run  watch
rodio-test/src/: app.rs  http.rs  main.rs  playlist.rs
src/: config.rs  lib.rs  main.rs  options.rs  util.rs
src/api/: mod.rs
src/entity/: cover_art.rs  mod.rs  song.rs
src/indexer/: db.rs  ffprobe.rs  mod.rs  types.rs
src/indexer/migration/: m20220101_000001_create_table.rs  m20241203_162956_cover_art.rs  mod.rs
src/query/: mod.rs
