[package]
name = "udrome"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["async-read-body", "typed-header"] }
axum-range = "0.4"
camino = { version = "1", features = ["serde1"] }
cors = "0.1.0"
f = "0.2.0"
id3 = "1"
log = "0.4"
mime_guess = "2.0.5"
mp3-duration = "0.1.10"
quick-xml = { version = "0.37.1", features = [
    "async-tokio",
    "serde",
    "serialize",
    "tokio",
] }
rand = "0.8.5"
rayon = "1.10.0"
sea-orm = { version = "1.1.2", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
subsonic-types = "0.2.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
