[package]
name = "udrome-frontend"
version = "0.1.0"
authors = ["Anatol Ulrich <e+github@mail.taugt.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0-rc.0", features = ["router"] }
dioxus-logger = "0.5"
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
subsonic-types = "0.2.0"
url = "2.5.4"

[features]
default = ["web"]
web = ["dioxus/web"]
