[package]
name = "rodio-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
crossterm = "0.28.1"
futures = "0.3.31"
id3 = "1.16.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", features = ["http2", "charset", "blocking", "rustls-tls", "stream"], default-features = false}
rodio = "0.20.1"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-logger = { version = "0.14.1", features = ["crossterm", "tracing", "tracing-support"] }
